--- a/Desktop/calculator-app/calculator.html
+++ b/Desktop/calculator-app/calculator.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Calculator</title>
+  <link real="icon" type="image/png" href="https://img.icons8.com/color/512/apple-calculator.png"/>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
